--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header>
     <img src="http://stayathome-syllabus.greenfox.academy/week01/assets/first-website-header.png" alt="Anakin" style="width: 100%">
     <div class="name">
-      <div ID="hi">Hi, My name is</div>
+      <div ID="hi">Hello, A nevem</div>
       <div ID="Anakin">Anakin Skywalker</div>
     </div>
   </header>
